--- a/bower.json
+++ b/bower.json
@@ -8,11 +8,12 @@
     "angular": "1.2.28",
     "angular-bootstrap": "~0.12.1",
     "components-font-awesome": "~4.3.0",
-    "jquery.easing": "~1.3.1",
+    "jquery-simple-slider": "^1.0.0",
     "angular-animate": "1.2.28"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.28"
+    "angular-mocks": "~1.2.28",
+    "soundmanager2": "*"
   },
   "appPath": "app",
   "moduleName": "malandracaSiteApp",
