--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,13 @@
     "angular": "1.2.28",
     "angular-bootstrap": "~0.12.1",
     "components-font-awesome": "~4.3.0",
-    "jquery-simple-slider": "^1.0.0",
-    "angular-animate": "1.2.28"
+    "angular-animate": "1.2.28",
+    "jquery-shoutcast": "https://raw.githubusercontent.com/Wavestreaming/jquery-shoutcast/master/jquery.shoutcast.min.js",
+    "soundmanager2": "*",
+    "angular-bootstrap-slider": "~0.1.1"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.28",
-    "soundmanager2": "*"
+    "angular-mocks": "~1.2.28"
   },
   "appPath": "app",
   "moduleName": "malandracaSiteApp",
