--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-animate": "1.2.28",
     "jquery-shoutcast": "https://raw.githubusercontent.com/Wavestreaming/jquery-shoutcast/master/jquery.shoutcast.min.js",
     "soundmanager2": "*",
-    "angular-bootstrap-slider": "~0.1.1"
+    "angular-bootstrap-slider": "~0.1.1",
+    "font-awesome": "~4.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.28"
